<resources>
    <string name="app_name">Mupeace</string>
    <string name="artists">Composers</string>
    <string name="genres">Performers</string>
    <string name="playlists">Playlists</string>
    <string name="files">Files</string>
    <string name="albums">Works</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="track">Track</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="up">Up</string>
    <string name="ok">OK</string>
    <string name="quit">Quit</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="loadingGenres">Loading</string>
    <string name="loadingAlbums">Loading</string>
    <string name="loadingArtists">Loading</string>
    <string name="loadingSongs">Loading</string>
    <string name="loadingPlaylists">Loading</string>
    <string name="serverAddress">Server address:</string>
    <string name="playlist">Playlist</string>
    <string name="addAndReplace">Add and replace</string>
    <string name="addAndReplacePlay">Add, replace and play</string>
    <string name="addAlbum">Add all</string>
    <string name="addPlaylist">Add playlist</string>
    <string name="addAndPlay">Add and play</string>
    <string name="addArtist">Add composer</string>
    <string name="addGenre">Add performer</string>
    <string name="addDirectory">Add</string>
    <string name="addSong">Add song</string>
    <string name="removeSong">Remove song</string>
    <string name="removeSongs">Remove songs</string>
    <string name="removeCountSongs">Removed %s songs</string>
    <string name="clear">Clear</string>
    <string name="mainMenu">Main menu</string>
    <string name="playlistCleared">Playlist cleared</string>
    <string name="deletedSongFromPlaylist">Deleted song from playlist</string>
    <string name="albumAdded">Album %s added</string>
    <string name="playlistAdded">Playlist %s added</string>
    <string name="addedDirectoryToPlaylist">Added %s to playlist</string>
    <string name="artistAdded">Composer %s added</string>
    <string name="host">Host</string>
    <string name="hostDescription">Hostname or IP address for the MPD server</string>
    <string name="hostStreaming">Streaming host</string>
    <string name="hostStreamingDescription">Hostname or IP address for streaming</string>
    <string name="port">Port</string>
    <string name="portDescription">Port for the MPD server (Default: 6600)</string>
    <string name="password">Password</string>
    <string name="passwordDescription">Password for the MPD server</string>
    <string name="random">Shuffle</string>
    <string name="randomDescription">Enable/disable shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="repeatDescription">Enable/disable repeat</string>
    <string name="albumartist">Album Artist</string>
    <string name="albumartistDescription">Use Album Artist tag in Composers view</string>
    <string name="albumTrackSort">Sort by track number</string>
    <string name="albumTrackSortDescription">Sort tracks within an album by number not name</string>
    <string name="version">Version</string>
    <string name="songs">Songs</string>
    <string name="serverInformation">Server information</string>
    <string name="serverInformationDescription">Information on the MPD server such as version and song count</string>
    <string name="connectionSettings">Connection settings</string>
    <string name="connectionSettingsDescription">Choose how to connect to the MPD server</string>
    <string name="outputs">Outputs</string>
    <string name="outputsDescription">Enable/disable outputs</string>
    <string name="servers">Players</string>
    <string name="serverSettings">Server settings</string>
    <string name="coverSettings">Cover artwork settings</string>
    <string name="clientSettings">Client settings</string>
    <string name="interfaceSettings">Interface settings</string>
    <string name="librarySettings">Library settings</string>
    <string name="songAdded">Song %s added</string>
    <string name="about">About</string>
    <string name="aboutDescription">About Mupeace</string>
    <string name="waitForWLAN">Waiting a Wi-Fi connection…</string>
    <string name="connectionFailed">Connection failed</string>
    <string name="connectionFailedMessage">Connection to the MPD server failed! Check that it is running and reachable. (%s)</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="connectingToServer">Connecting to the MPD server</string>
    <string name="connected">Connected</string>
    <string name="notConnected">Not connected</string>
    <string name="noSongInfo">No song information</string>
    <string name="notInRange">Not in range, remembered</string>
    <string name="playlistNameEditTitle">Playlist name</string>
    <string name="playlistSave">Save playlist</string>
    <string name="playlistDeleted">Playlist %s deleted</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="preferredConnection">Preferred connection</string>
    <string name="chooseWLAN">Choose a Wi-Fi network</string>
    <string name="wlanBasedSettings">Wi-Fi network based settings</string>
    <string name="defaultSettings">Default connection settings</string>
    <string name="wlanBasedSettingsDescription">Set MPD server for a Wi-Fi network</string>
    <string name="defaultSettingsDescription">Set a default MPD server</string>
    <string name="stream">Stream</string>
    <string name="buffering">Buffering…</string>
    <string name="portStreaming">Streaming port</string>
    <string name="portStreamingDescription">Port for streaming (Default: 8000)</string>
    <string name="suffixStreaming">Streaming url suffix</string>
    <string name="suffixStreamingDescription">Suffix to append to the stream url (ex. mpd.mp3)</string>
    <string name="streamStopped">Streaming stopped</string>
    <string name="streamError">Streaming error, stream not playable</string>
    <string name="streamPaused">Streaming paused</string>
    <string name="streamPauseBattery">For saving battery, stop streaming if not used</string>
    <string name="aboutText1">Mupeace is open-source software. Visit https://github.com/eisnerd/mupeace for the source code.</string>
    <string name="aboutText2">Mupeace is a fork of MPDroid (https://github.com/abarisain/dmix) and, in turn, PMix (http://code.google.com/p/pmix/). Thanks to them!</string>
    <string name="aboutLastFM">Thanks to last.fm for providing album art.</string>
    <string name="search">Search</string>
    <string name="search_label">Mupeace</string>
    <string name="search_hint">Search…</string>
    <string name="libraryTabActivity">Library</string>
    <string name="warningTitle">Please read</string>
    <string name="warningText1">Welcome to Mupeace\nThis will only display once.\n\nFirst of all, this application is for controlling an MPD server, so it is no use unless you have one. MPD is open source, free and easy to set up on your PC or embedded linux devices, however, so why not have a look for a tutorial?\n\nMupeace will attempt to discover MPD servers on your wifi network. If this fails, you\'re using mobile data not Wi-Fi or your server is password protected, you will need to use the settings menu, accessed with the spanner or rotary switch icon, to enter the connection details.</string>
    <string name="editPlaylist">Edit</string>
    <string name="edit">Edit</string>
    <string name="nowPlaying">Now playing</string>
    <string name="cancel">Cancel</string>
    <string name="skipToHere">Skip to here</string>
    <string name="playNext">Play next</string>
    <string name="moveFirst">Move to first</string>
    <string name="moveLast">Move to last</string>
    <string name="removeFromPlaylist">Remove from playlist</string>
    <string name="manage">Manage</string>
    <string name="save">Save</string>
    <string name="sc_LibTab">L</string>
    <string name="updateDB">Update</string>
    <string name="updateDBDetails">Check for new or updated songs</string>
    <string name="streamingManualURL">Use a specific URL for streaming (icecast)</string>
    <string name="configurationName">Configuration Name</string>
    <string name="streamingURLDescription">Stream URL (with http://)</string>
    <string name="sortAlbumsByYear">Album year</string>
    <string name="sortAlbumsByYearDescription">Sort albums by year</string>
    <string name="showAlbumTrackCount">Album track count</string>
    <string name="showAlbumTrackCountDescription">Show number of tracks on album</string>
    <string name="enableLastFM">Download cover art</string>
    <string name="enableLastFMDescription">Get cover art using last.fm (sends them your song information)</string>
    <string name="enableLocalCover">Download local cover art</string>
    <string name="enableLocalCoverDescription">Get cover art from the server running MPD (requires a webserver, read the wiki!)</string>
    <string name="musicPath">Path to music</string>
    <string name="musicPathDescription">Path to your music directory on the MPD server ie, files/mp3 (music/ for vortexbox users)</string>
    <string name="coverFileName">Cover filename</string>
    <string name="coverFileNameDescription">Standard filename for your album artwork ie, folder.jpg (cover.jpg for vortexbox users)</string>
    <string name="cacheUsage">Cache usage</string>
    <string name="whatsNew">What\'s new ?</string>
    <string name="whatsNewDescription">See changelog (opens in your browser)</string>
    <string name="deleteServer">Delete this server</string>
    <string name="aboutIcon">Original app icon by Asher (http://kyo-tux.deviantart.com/) and brsev (http://brsev.deviantart.com/), modified for Mupeace.</string>
    <string name="connectionFailedMessageSetting">Connection failed, check your connection settings. (%s)</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="no_result">No results</string>
    <string name="backpressToQuit">Press back again to quit</string>
    <string name="playQueue">Play queue</string>
    <string name="deletePlaylistPrompt">Are you sure you wish to delete %s?</string>
    <string name="failedToDelete">Failed to delete %s</string>
    <string name="variousArtists">Various authors</string>
    <string name="tracksInfoHeader">%1$s Tracks, %2$s</string>
    <string name="tracksInfoHeaderPlural">%1$s Tracks, %2$s</string>
    <string name="audioFocusFailed">Cannot stream while another application is playing music.</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="newPlaylist">(New playlist)</string>
    <string name="playlistName">Playlist Name</string>
    <string name="newPlaylistPrompt">Enter name for new playlist:</string>
    <string name="streams">Streams</string>
    <string name="addStream">Add stream</string>
    <string name="editStream">Edit stream</string>
    <string name="streamAdded">Stream %s added</string>
    <string name="loadingStreams">Loading</string>
    <string name="streamDeleted">Stream %s deleted</string>
    <string name="deleteStream">Delete stream</string>
    <string name="deleteStreamPrompt">Are you sure you wish to delete %s?</string>
    <string name="streamName">Name:</string>
    <string name="streamUrl">URL:</string>
    <string name="streamDetails">Stream details:</string>
    <string name="genreAdded">Performer %s added</string>
    <string name="enableStopButton">Show stop button</string>
    <string name="singleMode">Single track</string>
    <string name="consumeMode">Remove played</string>
    <string name="donate">Donate</string>
    <string name="stop">Stop</string>
</resources>