<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="280dp"
    android:layout_height="fill_parent"
    android:layout_gravity="start"
    android:background="@color/nowplaying_background"
    android:isScrollContainer="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraryTabActivity"
            />

        <ListView
            android:id="@+id/left_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingStart="12dp"
            android:scrollbars="none"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outputs"
            />

        <ListView
            android:id="@+id/left_outputs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="multipleChoice"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingStart="12dp"
            android:scrollbars="none"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servers"
            />

        <ListView
            android:id="@+id/left_servers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingStart="12dp"
            android:scrollbars="none"
            />

    </LinearLayout>

</ScrollView>